--- a/index.html
+++ b/index.html
@@ -32,6 +32,76 @@
         </a>
     </div>
      </header>
+
+     <!-- Apresentação -->
+  <section id="Apresentacao" class="Apresentacao">
+    <div class="container hero-grid">
+      <div class="hero-copy card soft">
+        <p class="kicker">Bem-vinda(o) ao</p>
+        <h1>Caffè Aurora</h1>
+        <p>Grãos selecionados, pães de fermentação natural e um ambiente feito para conversar, estudar e criar. Experimente o <strong>Latte da Casa</strong> e o <strong>Cookie de Doce de Leite</strong>.</p>
+        <div class="actions">
+          <a class="BotaoCardapio" href="#menu">Ver Cardápio</a>
+          <a class="BotaoFazer pedido" href="#contato">Fazer Pedido</a>
+        </div>
+      </div>
+      <figure class="hero-visual card glossy" aria-label="Xícara de café quente">
+        <img src="Image/cowWorking.png" alt="Uma xícara de latte com arte no leite" class="cup">
+      </figure>
+    </div>
+  </section>
+
+  <!-- Menu -->
+   <section id="menu" class="section">
+    <div class="container">
+      <h2>Cardápio</h2>
+      <p class="muted">Tudo preparado na hora com ingredientes selecionados.</p>
+      <div class="grid cards-3">
+        <article class="card product">
+          <div class="img">
+            <img src="Image/latte.png" alt="Latte" loading="lazy">
+          </div>
+          <div class="content">
+            <h3>Latte</h3>
+            <p>Espresso duplo e leite cremoso vaporizado.</p>
+            <div class="meta">
+              <span class="price">R$ 12,00</span>
+              <button class="btn add" data-add>Adicionar</button>
+            </div>
+          </div>
+        </article>
+
+        <article class="card product">
+          <div class="img">
+            <img src="Image/bebidaespecial.png" alt="Aurora Sunset" loading="lazy">
+          </div>
+          <div class="content">
+            <h3>Aurora Sunset</h3>
+            <p>Uma explosão cítrica refrescante, combinando laranja vibrante com a suavidade cremosa do chantilly. Ideal para revigorar suas tardes com sabor e leveza.</p>
+            <div class="meta">
+              <span class="price">R$ 14,00</span>
+              <button class="btn add" data-add>Adicionar</button>
+            </div>
+          </div>
+        </article>
+
+        <article class="card product">
+          <div class="img">
+            <img src="Image/Cookie.png" alt="Cookie artesanal com gotas de chocolate" loading="lazy">
+          </div>
+          <div class="content">
+            <h3>Cookie</h3>
+            <p>Cookie artesanal com gotas de chocolate.</p>
+            <div class="meta">
+              <span class="price">R$ 6,00</span>
+              <button class="btn add" data-add>Adicionar</button>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
     
 </body>
 </html>
