--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#galeria">Galeria</a>
         <a href="#contato">Contato</a>
         <button id="TemaMudado" class="BotaoTema" type="button" aria-pressed="false">🌙 Tema</button>
-        <a id="CarrinhoBotao" class="BotaoCompra" href="html/carrinho.html">
+        <a id="CarrinhoBotao" class="BotaoCompra" href="HTML/Carrinho.html">
             🧺 Carrinho <span id="Carrinho1" class="Quantidade">0</span>
         </a>
     </div>
@@ -176,7 +176,7 @@
 
   <div id="toast" class="toast" role="status" aria-live="polite">Mensagem enviada com sucesso!</div>
 
-  <script src="js/Script.js"></script>
+  <script src="JS/Script.js"></script>
 
     
 </body>
