--- a/HTML/Carrinho.html
+++ b/HTML/Carrinho.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Carrinho • Caffè Aurora</title>
-  <link rel="stylesheet" href="/CSS/style.css">
-  <link rel="stylesheet" href="/CSS/Carrinho.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/carrinho.css">
 </head>
 <body>
   <header class="site-header">
@@ -37,7 +37,7 @@
         <div id="cartList"></div>
         <div class="actions">
           <a class="btn ghost" href="/index.html">Continuar comprando</a>
-          <button class="BotaoPrimario" id="toAddress">Prosseguir para Endereço →</button>
+          <button class="btn primary" id="toAddress">Prosseguir para Endereço →</button>
         </div>
       </section>
       
@@ -112,3 +112,4 @@
   <div id="toast" class="toast">Atualizado!</div>
   <script src="/JS/Carrinho.js" defer></script>
 </body>
+</head>
