--- a/index.html
+++ b/index.html
@@ -177,6 +177,6 @@
 
   <div id="toast" class="toast" role="status" aria-live="polite">Mensagem enviada com sucesso!</div>
 
-  <script src="js/Script.js"></script>
+  <script src="JS/Script.js"></script>
 </body>
 </html>
